# durak

./: .env  .gitignore  hello.py  main.py  pyproject.toml
src/: alembic.ini  app.py
src/core/: cache_config.py  httpx_client.py  lifespan.py  logger.py  manager.py  middleware.py  settings.py  utils.py
src/db/: base.py  dependencies.py
src/db/crud/: base.py  game.py  room.py  timer.py
src/db/enums/: room.py
src/db/migrations/: env.py
src/db/models/: room.py
src/domain/: router.py  schema.py  types.py
src/domain/attack/: command.py  controller.py  router.py  schema.py  strategy.py
src/domain/beat/: command.py  schema.py
src/domain/card/: command.py  schema.py  service.py
src/domain/command/: base.py
src/domain/controller/: base.py  service.py
src/domain/defence/: command.py  schema.py
src/domain/game/: command.py  enums.py  exception.py  schema.py
src/domain/join/: command.py  schema.py
src/domain/ready/: command.py  schema.py
src/domain/role/: command.py
src/domain/room/: exception.py  router.py  schema.py
src/domain/round/: command.py  enum.py  schemas.py
src/domain/seat/: exception.py  schema.py
src/domain/slot/: schema.py
src/domain/state/: base.py  beat.py  exception.py  game.py  round.py  schema.py  slot.py  take.py  turn.py  win.py
src/domain/strategy/: attack.py  base.py  beat_execute copy.py  beat_execute.py  beat_request.py  defence.py  disconnect.py  distribution.py  game.py  join.py  ready.py  round.py  start.py  start_game.py  take_execute.py  take_request.py  turn.py  watch.py  win.py
src/domain/take/: command.py  schema.py
src/domain/timer/: attack.py  base.py  beat.py  command.py  defence.py  disconnect.py  exception.py  service.py  take.py
src/domain/turn/: command.py  schema.py  service.py
src/domain/user/: exception.py  schema.py  types.py
src/exception/: base.py  support.py
tests/: conftest.py
(+72 files in other folders)
