[tool.poetry]
name = "durakservice"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "0.21.1"
pydantic = "^2"
pydantic-settings = "^2"
yarl = "^1.9.2"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
alembic = "^1.11.1"
asyncpg = {version = "^0.28.0", extras = ["sa"]}
loguru = "^0.7.2"
orjson = "^3.9.10"
httptools = "^0.6.1"
aiocache = "^0.12.2"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
websockets = "^12.0"
setuptools = "^72.1.0"
redis = {extras = ["json"], version = "^5.0.8"}
vulture = "^2.13"
trio = "^0.26.2"
celery = "^5.4.0"
wsproto = "^1.2.0"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
ruff = "^0.0.292"
mypy = "^1.1.1"
pre-commit = "^3.0.1"
black = "^22.12.0"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
python-dotenv = "^1.0.0"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src",]

[tool.mypy]
exclude = "tests"
strict = true
ignore_missing_imports = true
disallow_any_generics = false
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "TEMPLATE_PROJECT_ENVIRONMENT=pytest",
    "TEMPLATE_PROJECT_DB_BASE=fin_project_test",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
